testdata/baselines/reference/submodule/conformance/iteratorSpreadInArray10.errors.txt
iteratorSpreadInArray10.ts(7,17): error TS2488: Type 'SymbolIterator' must have a '[Symbol.iterator]()' method that returns an iterator.
iteratorSpreadInArray10.ts(7,17): error TS2489: An iterator must have a 'next()' method.


==== iteratorSpreadInArray10.ts (2 errors) ====
    class SymbolIterator {
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var array = [...new SymbolIterator];
                    ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'SymbolIterator' must have a '[Symbol.iterator]()' method that returns an iterator.
                    ~~~~~~~~~~~~~~~~~~
!!! error TS2489: An iterator must have a 'next()' method.